# ObsidianMCP

./: .gitignore  CURSOR_SETUP.md  README.md  main.py  pyproject.toml  run_server.py  settings.py
obsidian/: README.md  embeds.py  links.py  notes.py  vault.py
obsidian-mcp-py/: CLAUDE_SETUP.md  CURSOR_SETUP.md
obsidian-mcp-py/obsidian/: __init__.py  advanced_search.py  daily_notes.py  embeds.py  folders.py  links.py  notes.py  statistics.py  tags.py  templates.py  vault.py
obsidian-mcp-ts/: package-lock.json  package.json
obsidian-mcp-ts/src/: main.ts  settings.ts
obsidian-mcp-ts/src/obsidian/: advanced_search.ts  daily_notes.ts  embeds.ts  folders.ts  index.ts  links.ts  notes.ts  statistics.ts  tags.ts  templates.ts  utils.ts  vault.ts
